// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer should render logo, table of contents and passed children 1`] = `
<div
  className=""
>
  <main>
    <h1>
      Content
    </h1>
    <footer>
      <Styled(Markdown)
        text="Generated with [React Styleguidist](http://react-styleguidist.js.org/)"
      />
    </footer>
  </main>
  <div>
    <div>
      <Styled(Logo)>
        Hello
      </Styled(Logo)>
    </div>
    <TableOfContents
      sections={
        Array [
          Object {
            "components": Array [
              Object {
                "filepath": "components/foo.js",
                "name": "Foo",
                "pathLine": "components/foo.js",
                "props": Object {
                  "description": "Foo foo",
                },
              },
              Object {
                "filepath": "components/bar.js",
                "name": "Bar",
                "pathLine": "components/bar.js",
                "props": Object {
                  "description": "Bar bar",
                },
              },
            ],
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`should render an error when componentDidCatch() is triggered 1`] = `
<div
  style={
    Object {
      "background": "#fff",
      "color": "#c00",
      "margin": 16,
    }
  }
>
  <pre
    style={
      Object {
        "fontFamily": Array [
          "Consolas",
          "\\"Liberation Mono\\"",
          "Menlo",
          "monospace",
        ],
      }
    }
  >
    error
    info
  </pre>
  <div
    style={
      Object {
        "fontFamily": Array [
          "-apple-system",
          "BlinkMacSystemFont",
          "\\"Segoe UI\\"",
          "\\"Roboto\\"",
          "\\"Oxygen\\"",
          "\\"Ubuntu\\"",
          "\\"Cantarell\\"",
          "\\"Fira Sans\\"",
          "\\"Droid Sans\\"",
          "\\"Helvetica Neue\\"",
          "sans-serif",
        ],
      }
    }
  >
    <p>
      This may be due to an error in a component you are overriding, or a bug in React Styleguidist.
    </p>
    <p>
      If you believe this is a bug, 
      <a
        href="https://github.com/styleguidist/react-styleguidist/issues"
        style={
          Object {
            "color": "inherit",
          }
        }
      >
        please submit an issue
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`should render components list 1`] = `
<Styled(StyleGuide)
  hasSidebar={true}
  homepageUrl="https://react-styleguidist.js.org/"
  title="Hello"
  toc={
    <TableOfContents
      sections={
        Array [
          Object {
            "components": Array [
              Object {
                "filepath": "components/foo.js",
                "name": "Foo",
                "pathLine": "components/foo.js",
                "props": Object {
                  "description": "Foo foo",
                },
              },
              Object {
                "filepath": "components/bar.js",
                "name": "Bar",
                "pathLine": "components/bar.js",
                "props": Object {
                  "description": "Bar bar",
                },
              },
            ],
          },
        ]
      }
    />
  }
>
  <Sections
    depth={1}
    sections={
      Array [
        Object {
          "components": Array [
            Object {
              "filepath": "components/foo.js",
              "name": "Foo",
              "pathLine": "components/foo.js",
              "props": Object {
                "description": "Foo foo",
              },
            },
            Object {
              "filepath": "components/bar.js",
              "name": "Bar",
              "pathLine": "components/bar.js",
              "props": Object {
                "description": "Bar bar",
              },
            },
          ],
        },
      ]
    }
  />
</Styled(StyleGuide)>
`;

exports[`should render welcome screen 1`] = `<Styled(Welcome) />`;
